syntax = "proto3";

option go_package = ".;packets";

package packets;

import "google/protobuf/any.proto";


message SiswaRequest {
    google.protobuf.Any Data = 1;
}

message OutputSiswa {
    int32 Status = 1;
    google.protobuf.Any Data = 2;
}

service Siswa {
    rpc GetListSiswaUsecase(SiswaRequest) returns(OutputSiswa){}
    rpc CreateSiswaUsecase(SiswaRequest) returns(OutputSiswa){}
}